# axum-diesel-practice

./: .gitignore  Cargo.toml
migrations/2024-01-30-204027_create_posts/: up.sql
migrations/2024-02-17-144503_create_users/: up.sql
migrations/2024-02-21-135257_create_user_sessions/: down.sql  up.sql
migrations/2024-02-21-140840_create_oauth2_records/: down.sql  up.sql
src/: config.rs  main.rs  middlewares.rs  routes.rs
src/domain/models/: auth.rs  mod.rs  post.rs  user.rs  user_session.rs
src/handlers/auth/: login.rs  mod.rs  oauth_return.rs  profile.rs
src/handlers/posts/: create_post.rs  delete_post.rs  get_post.rs  list_posts.rs  mod.rs  update_post.rs
src/infra/: errors.rs
src/infra/db/: schema.rs
src/infra/repositories/: auth_repository.rs  mod.rs  post_repository.rs  user_repository.rs  user_sessions_repository.rs
