[package]
name = "axum-diesel-practice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4" }
diesel = { version = "2.1.4", features = ["postgres", "uuid", "serde_json"] }
deadpool-diesel = { version = "0.5.0", features = ["postgres"] }
tokio = { version = "1.35.1", features = ["full"] }
dotenvy = "0.15.7"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
uuid = {version = "1.7.0", features = ["serde"]}
chrono = {version = "0.4.33", features = ["serde"]}
